; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_config_mem.c_config_memory_set_multivar.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_config_mem.c_config_memory_set_multivar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*, i8*)* @config_memory_set_multivar to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @config_memory_set_multivar(i8* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @GIT_UNUSED(i8* %9)
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @GIT_UNUSED(i8* %11)
  %13 = load i8*, i8** %7, align 8
  %14 = call i32 @GIT_UNUSED(i8* %13)
  %15 = load i8*, i8** %8, align 8
  %16 = call i32 @GIT_UNUSED(i8* %15)
  %17 = call i32 (...) @config_error_readonly()
  ret i32 %17
}

declare dso_local i32 @GIT_UNUSED(i8*) #1

declare dso_local i32 @config_error_readonly(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
